Removing Pattern Matching as it would require users to explicitly enable preview features