@@ -17,12 +17,6 @@ dependencies {
 sourceCompatibility = '17'
 targetCompatibility = '17'
 
-// "Pattern Matching for switch Expressions and Statements" is still preview in Java 17
-// https://docs.oracle.com/en/java/javase/17/language/pattern-matching.html
-compileJava.options.compilerArgs += ['--enable-preview']
-javadoc.options.addBooleanOption('-enable-preview', true)
-javadoc.options.addStringOption('-release', "${compileJava.sourceCompatibility}")
-
 javadoc {
     options.noTimestamp = true
     options.noQualifiers = ["all"]
